--- a/motor_deal_granada/pubspec.yaml
+++ b/motor_deal_granada/pubspec.yaml
@@ -40,9 +40,21 @@ dependencies:
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.5.2
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "web/Esta.png"
+
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  adaptive_icon_foreground: "web/Esta.png"
+  adaptive_icon_background: "#000000"
+  image_path_android: null
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
