--- a/motor_deal_granada/pubspec.yaml
+++ b/motor_deal_granada/pubspec.yaml
@@ -31,14 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  http: ^0.13.5
+  url_launcher: ^6.2.1
   cupertino_icons: ^1.0.8
   image_picker: ^1.0.4
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.5.2
+
+
 
 flutter_icons:
   android: true
