--- a/motor_deal_granada/pubspec.yaml
+++ b/motor_deal_granada/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.5.3
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.5.2
+  shared_preferences: ^2.2.3
+  provider: ^6.1.2
 
 
 flutter_icons:
