--- a/motor_deal_granada/pubspec.yaml
+++ b/motor_deal_granada/pubspec.yaml
@@ -34,13 +34,14 @@ dependencies:
   http: ^0.13.5
   url_launcher: ^6.2.1
   cupertino_icons: ^1.0.8
-  image_picker: ^1.0.4
+  image_picker: ^1.1.0
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.5.2
   shared_preferences: ^2.2.3
   provider: ^6.1.2
+  geolocator: ^11.0.0
 
 
 flutter_icons:
