--- a/motor_deal_granada/pubspec.yaml
+++ b/motor_deal_granada/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "web/Esta.png"
+  image_path: "assets/image/logo.png"
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -38,12 +38,12 @@ dev_dependencies:
 
 flutter_launcher_icons:
   android: true
-  adaptive_icon_foreground: "web/Esta.png"
+  adaptive_icon_foreground: "assets/image/logo.png"
   adaptive_icon_background: "#000000"
-  image_path_android: null
+  image_path_android: "assets/image/logo.png"
 
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/image/
+    - assets/image/logo.png
