--- a/motor_deal_granada/pubspec.yaml
+++ b/motor_deal_granada/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
 
   http: ^0.13.5
-  cached_network_image: ^3.3.1 
+  cached_network_image: ^3.3.1
   url_launcher: ^6.2.1
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.0
@@ -46,4 +46,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/image/logo.png
+    - assets/image/folleto.jpg
